// This project should use JavaCC plugin in order to compile the .jjt file
// However, LARA language is in maintenance mode, no changes are currently planned

plugins {
    id 'distribution'
    id 'java'
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

// Repositories providers
repositories {
    mavenCentral()
}

dependencies {
    implementation ':jOptions'
    implementation ':SpecsUtils'
    implementation ':tdrcLibrary'
    implementation ':LanguageSpecification'
    implementation ':LaraUtils'
}

// Project sources
sourceSets {
    main {
        java {
            srcDir 'src'
        }
    }
}
